# enum_convert

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
src/: enum_from.rs  enum_into.rs  from_variants.rs  idents.rs  into_variants.rs  lib.rs
src/enum_from/: generator.rs  parser.rs
src/enum_into/: generator.rs  parser.rs
tests/: combination.rs  enum_from.rs  enum_into.rs
tests/combination/compile_fail/: derived_target_and_source.rs  derived_target_and_source.stderr
tests/combination/pass/: basic.rs
tests/compile_fail/: derive_on_struct.rs  derive_on_struct.stderr  invalid_attribute_syntax.rs  invalid_attribute_syntax.stderr  invalid_field_mapping.rs  invalid_field_mapping.stderr  missing_enum_from_attribute.rs  missing_enum_from_attribute.stderr  missing_enum_into_attribute.rs  missing_enum_into_attribute.stderr  multiple_sources_without_specification.rs  multiple_sources_without_specification.stderr
tests/enum_from/compile_fail/container/: derive_on_struct.rs  derive_on_struct.stderr  empty_attribute_list.rs  empty_attribute_list.stderr  invalid_attribute_syntax.rs  invalid_attribute_syntax.stderr  invalid_source.rs  (+11 more)
tests/enum_from/pass/: basic.rs  field_rename.rs  field_rename_with_multiple_sources.rs  mapping_struct_to_tuple_fields.rs  mapping_tuple_to_struct_fields.rs  multiple_sources.rs  variant_rename.rs
tests/enum_into/pass/: basic.rs  field_rename.rs  field_rename_with_multiple_targets.rs  mapping_struct_to_tuple_fields.rs  mapping_tuple_to_struct_fields.rs  multiple_targets.rs  variant_rename.rs
(+96 files in other folders)
